remove lighten/darken color functions

--- a/src/assets/css/flavors/github/tables.css
+++ b/src/assets/css/flavors/github/tables.css
@@ -3,6 +3,7 @@
     display: block;
     width: 100%;
     overflow: auto;
+    border-collapse: collapse;
 
     th {
       font-weight: 600;
@@ -11,12 +12,12 @@
     th,
     td {
       padding: 6px 13px;
-      border: 1px solid lighten(#d1d5da, 5%);
+      border: 1px solid #dfe2e5;
     }
 
     tr {
       background-color: #fff;
-      border-top: 1px solid darken(#d1d5da, 4%);
+      border-top: 1px solid #c6cbd1;
 
       &:nth-child(2n) {
         background-color: #f6f8fa;
