--- a/src/assets/css/flavors/github/images.css
+++ b/src/assets/css/flavors/github/images.css
@@ -33,7 +33,7 @@
       padding: 7px;
       margin: 13px 0 0;
       overflow: hidden;
-      border: 1px solid lighten(#d1d5da, 5%);
+      border: 1px solid #dfe2e5;
     }
 
     span img {
