--- a/src/assets/css/flavors/github/index.css
+++ b/src/assets/css/flavors/github/index.css
@@ -69,7 +69,7 @@
   blockquote {
     padding: 0 1em;
     color: #6a737d;
-    border-left: 0.25em solid lighten(#d1d5da, 5%);
+    border-left: 0.25em solid #dfe2e5;
 
     > :first-child {
       margin-top: 0;
@@ -88,7 +88,7 @@
     color: #444d56;
     vertical-align: middle;
     background-color: #fafbfc;
-    border: solid 1px darken(#d1d5da, 4%);
+    border: solid 1px #c6cbd1;
     border-bottom-color: #959da5;
     border-radius: 3px;
     box-shadow: inset 0 -1px 0 #959da5;
