add editor layout
- page as editor layout
- github-based markdown preview style

--- a/src/assets/css/flavors/bitbucket/codes.css
+++ b/src/assets/css/flavors/bitbucket/codes.css
@@ -1,4 +1,4 @@
-.markdown-flavored--github {
+.markdown-flavored--bitbucket {
   code,
   tt {
     padding: 0.2em 0.4em;
@@ -58,7 +58,7 @@
   pre code,
   pre tt {
     display: inline;
-    max-width: 100%;
+    max-width: auto;
     padding: 0;
     margin: 0;
     overflow: visible;
