--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,8 +1,12 @@
+/* generic definitions */
 html,
 body,
 .page {
+  background-color: #232425;
   height: 100vh;
   width: 100vw;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
 .page {
@@ -19,5 +23,10 @@ body,
 
   &__editor {
     flex: 1;
+
+    &,
+    & * {
+      max-height: 100vh;
+    }
   }
 }
