--- a/src/assets/css/flavors/bitbucket/index.css
+++ b/src/assets/css/flavors/bitbucket/index.css
@@ -1,10 +1,10 @@
-.markdown-flavored--github {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+.markdown-flavored--bitbucket {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
-  color: #24292e;
+  color: #172b4d;
 
   /* Clearfix on the markdown body */
   &::before {
@@ -68,10 +68,8 @@
 
   blockquote {
     padding: 0 1em;
-    margin-left: 0;
-    margin-right: 0;
     color: #6a737d;
-    border-left: 0.25em solid #dfe2e5;
+    border-left: 0.25em solid lighten(#d1d5da, 5%);
 
     > :first-child {
       margin-top: 0;
@@ -90,7 +88,7 @@
     color: #444d56;
     vertical-align: middle;
     background-color: #fafbfc;
-    border: solid 1px #c6cbd1;
+    border: solid 1px darken(#d1d5da, 4%);
     border-bottom-color: #959da5;
     border-radius: 3px;
     box-shadow: inset 0 -1px 0 #959da5;
@@ -101,5 +99,4 @@
 @import "./tables";
 @import "./images";
 @import "./codes";
-@import "./syntax";
 @import "./blob-csv";
