--- a/src/assets/css/flavors/bitbucket/codes.css
+++ b/src/assets/css/flavors/bitbucket/codes.css
@@ -1,70 +1,22 @@
 .markdown-flavored--bitbucket {
-  code,
-  tt {
-    padding: 0.2em 0.4em;
-    margin: 0;
-    font-size: 85%;
-    background-color: rgba(#1b1f23, 0.05);
-    border-radius: 3px;
-
-    br {
-      display: none;
-    }
-  }
-
-  code,
   pre,
-  tt {
-    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-  }
-
-  del code {
-    text-decoration: inherit;
-  }
-
-  pre {
-    word-wrap: normal;
-
-    > code {
-      padding: 0;
-      margin: 0;
-      font-size: 100%;
-      word-break: normal;
-      white-space: pre;
-      background: transparent;
-      border: 0;
-    }
-  }
-
-  .highlight {
-    margin-bottom: 16px;
-
-    pre {
-      margin-bottom: 0;
-      word-break: normal;
-    }
-  }
-
-  .highlight pre,
-  pre {
-    padding: 16px;
-    overflow: auto;
-    font-size: 85%;
-    line-height: 1.45;
-    background-color: #f6f8fa;
+  code {
+    font-family: SFMono-Medium, 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo,
+      Consolas, Courier, monospace;
+    font-size: 12px;
+    overflow-x: auto;
+    background: rgb(244, 245, 247);
     border-radius: 3px;
   }
 
-  pre code,
-  pre tt {
-    display: inline;
-    max-width: auto;
-    padding: 0;
-    margin: 0;
-    overflow: visible;
-    line-height: inherit;
-    word-wrap: normal;
-    background-color: transparent;
-    border: 0;
+  pre {
+    margin-top: 8px;
+    overflow-wrap: normal;
+    padding: 16px 8px;
+  }
+
+  code {
+    max-width: 100%;
+    padding: 2px 4px;
   }
 }
