--- a/src/assets/css/flavors/bitbucket/tables.css
+++ b/src/assets/css/flavors/bitbucket/tables.css
@@ -1,30 +1,30 @@
 .markdown-flavored--bitbucket {
   table {
-    display: block;
+    margin-top: 8px;
+    border-collapse: collapse;
     width: 100%;
-    overflow: auto;
 
     th {
-      font-weight: 600;
+      vertical-align: top;
     }
 
     th,
     td {
-      padding: 6px 13px;
-      border: 1px solid lighten(#d1d5da, 5%);
+      border: none;
+      text-align: left;
     }
 
-    tr {
-      background-color: #fff;
-      border-top: 1px solid darken(#d1d5da, 4%);
+    thead,
+    tbody,
+    tfoot {
+      border-bottom: 2px solid #dfe1e6;
 
-      &:nth-child(2n) {
-        background-color: #f6f8fa;
+      tr {
+        td,
+        th {
+          padding: 8px 12px;
+        }
       }
-    }
-
-    img {
-      background-color: transparent;
     }
   }
 }
