--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -2,11 +2,17 @@
 html,
 body,
 .page {
-  background-color: #232425;
   height: 100vh;
   width: 100vw;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+}
+
+html,
+body,
+.page,
+.page__header {
+  background-color: #232425;
 }
 
 .page {
@@ -23,10 +29,15 @@ body,
 
   &__editor {
     flex: 1;
+    padding-top: 60px;
 
     &,
     & * {
-      max-height: 100vh;
+      max-height: calc(100vh - 60px);
     }
   }
+}
+
+select {
+  background: #ffffff url(assets/images/chevron-down.svg) no-repeat 90% 60%/0.625rem;
 }
