--- a/src/assets/css/flavors/azure/codes.css
+++ b/src/assets/css/flavors/azure/codes.css
@@ -4,7 +4,8 @@
     color: rgba(0, 0, 0, 1);
   }
 
-  code {
+  code,
+  kbd {
     font-family: Menlo, Consolas, Courier New, monospace;
     font-size: 12px;
     background-color: rgba(234, 234, 234, 1);
@@ -23,21 +24,5 @@
     white-space: pre;
     word-wrap: normal;
     overflow-x: auto;
-  }
-
-  kbd {
-    display: inline-block;
-    padding: 3px 5px;
-    font-size: 11px;
-    line-height: 10px;
-    color: #555;
-    vertical-align: middle;
-    background-color: #fcfcfc;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #ccc #ccc #bbb;
-    border-image: none;
-    border-radius: 3px;
-    box-shadow: 0 -1px 0 #bbb inset;
   }
 }
